--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >VIŠE</a
         >
         <a href="index.html#boxes" class="header-btn arrow-btn click-boxes"
-          ><i class="arrow fa fa-long-arrow-right" aria-hidden="true"></i
+          ><i class="arrow fa fa-arrow-down jump" aria-hidden="true"></i
         ></a>
       </div>
 
@@ -84,7 +84,10 @@
             <h2 id="lang-text1" class="boxes-h2">JEDINSTVEN DEKOR</h2>
             <p class="boxes-p">
               Cornelius & Cylinder je prvi Steampunk lokal u Srbiji, sa
-              nesvakidasnjim i autenticnim dekorom.
+              nesvakidašnjim i autentičnim dekorom. Zamislite svet zaglavljen
+              između viktorijanske ere i dramatičnih promena industrijske
+              revolucije. Provirite u magični svet našeg jedinstvenog ambijenta
+              i uverite se i sami.
             </p>
             <a href="about.html" class="boxes-btn">NAŠA PRIČA</a>
           </div>
@@ -94,11 +97,13 @@
       <div class="flex-container">
         <div class="row">
           <div class="boxes-content">
-            <h2 class="boxes-h2">BASTA DALEKO OD BUKE ULICE</h2>
+            <h2 class="boxes-h2">ZELENA OAZA NA VRAČARU</h2>
             <p class="boxes-p">
-              Izuzetna izdvojena basta kojoj ne smeta buka ulice.
+              Izuzetna izdvojena basta kojoj ne smeta buka ulice. Zavirite u
+              zeleni kutak jedinstvene bašte na Vračaru, provedite dan opušteno,
+              sa prijateljima ili porodicom. Zelena oaza je spremna!
             </p>
-            <a href="#" class="boxes-btn">PROČITAJ VIŠE</a>
+            <a href="#" class="boxes-btn">GALERIJA</a>
           </div>
           <div class="boxes-image image-2"></div>
         </div>
@@ -110,12 +115,11 @@
           <div class="boxes-content">
             <h2 class="boxes-h2">TEKST</h2>
             <p class="boxes-p">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro in
-              dignissimos quibusdam sapiente quisquam eligendi perferendis, non
-              sit temporibus quaerat ab, totam, nemo dolore aut modi quam culpa
-              nihil a!
+              Prepustite se čarima našeg magičnog ambijenta i velikom izboru
+              piva, koktela i vrhunskih specijaliteta, uz svirke svakog petka i
+              subote. Dobrodosli u nas svet, gde nista ne nedostaje...
             </p>
-            <a href="#" class="boxes-btn">PROČITAJ VIŠE</a>
+            <a href="#" class="boxes-btn">MENI I KARTA PIĆA</a>
           </div>
         </div>
       </div>
@@ -126,9 +130,10 @@
         <div class="discover-item discover-food">
           <h2 class="discover-h2 wow fadeInUp">RESTORAN</h2>
           <p class="discover-p wow fadeInUp">
-            Uzivajte u najukusnijim specijalitetima nase kuhinje, od svezeg
-            dorucka za snazan pocetak dana, do bifteka, vise vrsta burgera,
-            svinjskih rebaraca, domacih kobasica do vedgies krompirica.
+            Uživajte u najukusnijim specijalitetima naše kuhinje, od svežeg
+            doručka za snažan početak dana, do bifteka, više vrsta burgera,
+            svinjskih rebaraca, domaćih kobasica, vedgies krompirića i još mnogo
+            toga!
           </p>
           <a href="menu.html" class="discover-btn wow fadeInUp"
             >OTKRIJ NAŠ MENI</a
@@ -137,9 +142,9 @@
         <div class="discover-item discover-drinks">
           <h2 class="discover-h2 wow fadeInUp">KAFE-BAR</h2>
           <p class="discover-p wow fadeInUp">
-            Veliki izbor kafe, cedjenih sokova, koktela i zestokih pica, kao i
-            adekvatan izbor vina za svaku priliku. Za ljubitelje piva siroka
-            ponuda u tocilici i u flasicama, preko 40 vrsta!
+            Veliki izbor kafe, ceđenih sokova, koktela i žestokih pića, kao i
+            adekvatan izbor vina za svaku priliku. Za ljubitelje piva široka
+            ponuda u točilići i u flašicama, preko 40 vrsta!
           </p>
           <a href="menu-caffe.html" class="discover-btn wow fadeInUp"
             >KARTA PIĆA</a
