--- a/index.html
+++ b/index.html
@@ -84,10 +84,8 @@
             <h2 id="lang-text1" class="boxes-h2">JEDINSTVEN DEKOR</h2>
             <p class="boxes-p">
               Cornelius & Cylinder je prvi Steampunk lokal u Srbiji, sa
-              nesvakidašnjim i autentičnim dekorom. Zamislite svet zaglavljen
-              između viktorijanske ere i dramatičnih promena industrijske
-              revolucije. Provirite u magični svet našeg jedinstvenog ambijenta
-              i uverite se i sami.
+              nesvakidašnjim i autentičnim dekorom. Provirite u magični svet
+              našeg jedinstvenog ambijenta i uverite se i sami.
             </p>
             <a href="about.html" class="boxes-btn">NAŠA PRIČA</a>
           </div>
