--- a/gallery.html
+++ b/gallery.html
@@ -117,47 +117,47 @@
         <!-- <h2 class="gallery-heading food-heading">FOOD & DRINKS</h2> -->
         <div class="gallery-container">
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/cordon.jpg"
             data-lightbox="mygallery"
-            data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            data-title="Cordon Bleu"
+            ><img src="/assets/img/cordon-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/juneci.jpg"
             data-lightbox="mygallery"
-            data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            data-title="Juneći Cheeseburger"
+            ><img src="/assets/img/juneci-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/french-toast.jpg"
             data-lightbox="mygallery"
-            data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            data-title="French Toast"
+            ><img src="/assets/img/french-toast-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/crumble.jpg"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            ><img src="/assets/img/crumble-small.png" alt=""
           /></a>
 
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/rolnice.jpg"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            ><img src="/assets/img/rolnice-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/triple meat.jpg"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            ><img src="/assets/img/triple meat-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/bajadera.jpg"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            ><img src="/assets/img/bajadera-small.png" alt=""
           /></a>
         </div>
       </div>
