--- a/gallery.html
+++ b/gallery.html
@@ -69,28 +69,27 @@
         <h2 class="image-h2">INTERIOR</h2>
       </div>
       <div class="gallery-divider">
-        <!-- <h2 class="gallery-heading">INTERIOR</h2> -->
         <div class="gallery-container">
           <a
-            href="/assets/img/1.png"
+            href="/assets/img/1.gif"
             data-lightbox="mygallery"
             data-title="Title"
             ><img src="/assets/img/1-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/3.png"
+            href="/assets/img/3.gif"
             data-lightbox="mygallery"
             data-title="Title"
             ><img src="/assets/img/3-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/4.png"
+            href="/assets/img/4.gif"
             data-lightbox="mygallery"
             data-title="Title"
             ><img src="/assets/img/4-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/6.png"
+            href="/assets/img/6.gif"
             data-lightbox="mygallery"
             data-title="Title"
             ><img src="/assets/img/6-small.png" alt=""
@@ -114,7 +113,6 @@
         <h2 class="image-h2">FOOD & DRINKS</h2>
       </div>
       <div class="gallery-divider">
-        <!-- <h2 class="gallery-heading food-heading">FOOD & DRINKS</h2> -->
         <div class="gallery-container">
           <a
             href="/assets/img/cordon.jpg"
@@ -257,8 +255,6 @@
       <span class="loader"><span class="loader-inner"></span></span>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
-    <script src="assets/js/anime.min.js"></script>
     <script src="assets/js/lightbox-plus-jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/wow.js"></script>
     <script type="text/javascript" src="assets/js/translate-menu.js"></script>
