--- a/gallery.html
+++ b/gallery.html
@@ -65,22 +65,22 @@
     </nav>
 
     <div class="gallery">
-      <div class="menu-image">
+      <div class="menu-image interior-img">
         <h2 class="image-h2">INTERIOR</h2>
       </div>
       <div class="gallery-divider">
         <div class="gallery-container">
           <a
-            href="/assets/img/1.gif"
+            href="/assets/img/24.jpg"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/1-small.png" alt=""
+            ><img src="/assets/img/24-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/3.gif"
+            href="/assets/img/basta.gif"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/3-small.png" alt=""
+            ><img src="/assets/img/basta2-small.png" alt=""
           /></a>
           <a
             href="/assets/img/4.gif"
@@ -89,27 +89,27 @@
             ><img src="/assets/img/4-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/6.gif"
+            href="/assets/img/avion.gif"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/6-small.png" alt=""
+            ><img src="/assets/img/avion2-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/3.gif"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            ><img src="/assets/img/3-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/bgg1.jpg"
+            href="/assets/img/1.gif"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            ><img src="/assets/img/1-small.png" alt=""
           /></a>
         </div>
       </div>
 
-      <div class="menu-image">
+      <div class="menu-image food-image">
         <h2 class="image-h2">FOOD & DRINKS</h2>
       </div>
       <div class="gallery-divider">
