--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               nesvakidašnjim i autentičnim dekorom. Provirite u magični svet
               našeg jedinstvenog ambijenta i uverite se i sami.
             </p>
-            <a href="about.html" class="boxes-btn">NAŠA PRIČA</a>
+            <a href="about.html" class="boxes-btn wow flipInX">NAŠA PRIČA</a>
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
               zeleni kutak jedinstvene bašte na Vračaru, provedite dan opušteno,
               sa prijateljima ili porodicom. Zelena oaza je spremna!
             </p>
-            <a href="#" class="boxes-btn">GALERIJA</a>
+            <a href="gallery.html" class="boxes-btn wow fadeInUp">GALERIJA</a>
           </div>
           <div class="boxes-image image-2"></div>
         </div>
@@ -117,7 +117,9 @@
               piva, koktela i vrhunskih specijaliteta, uz svirke svakog petka i
               subote. Dobrodosli u nas svet, gde nista ne nedostaje...
             </p>
-            <a href="#" class="boxes-btn">MENI I KARTA PIĆA</a>
+            <a href="menu.html" class="boxes-btn wow flipInX"
+              >MENI I KARTA PIĆA</a
+            >
           </div>
         </div>
       </div>
@@ -188,19 +190,25 @@
               <div class="logos">
                 <a href="https://www.facebook.com/cornelius.cylinder/"
                   ><i
-                    class="fa fa-facebook-official logo"
+                    class="fa fa-facebook-official logo wow fadeInUp"
                     aria-hidden="true"
                   ></i
                 ></a>
                 <a href="https://twitter.com/cornelinder"
-                  ><i class="fa fa-twitter" aria-hidden="true"></i
+                  ><i class="fa fa-twitter wow fadeInUp" aria-hidden="true"></i
                 ></a>
                 <a href="https://www.instagram.com/cornelius_cylinder/"
-                  ><i class="fa fa-instagram" aria-hidden="true"></i
+                  ><i
+                    class="fa fa-instagram wow fadeInUp"
+                    aria-hidden="true"
+                  ></i
                 ></a>
                 <a
                   href="https://www.youtube.com/channel/UCFRDbxUN5TCokmgwxwPdrXg"
-                  ><i class="fa fa-youtube-play" aria-hidden="true"></i
+                  ><i
+                    class="fa fa-youtube-play wow fadeInUp"
+                    aria-hidden="true"
+                  ></i
                 ></a>
               </div>
             </div>
