--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
       <div class="flex-container">
         <div class="row">
           <div class="boxes-content">
-            <h2 class="boxes-h2">ZELENA OAZA NA VRAČARU</h2>
+            <h2 class="boxes-h2">ZELENA OAZA</h2>
             <p class="boxes-p">
-              Izuzetna izdvojena basta kojoj ne smeta buka ulice. Zavirite u
+              Izuzetna izdvojena bašta kojoj ne smeta buka ulice. Zavirite u
               zeleni kutak jedinstvene bašte na Vračaru, provedite dan opušteno,
               sa prijateljima ili porodicom. Zelena oaza je spremna!
             </p>
-            <a href="gallery.html" class="boxes-btn wow fadeInUp">GALERIJA</a>
+            <a href="gallery.html" class="boxes-btn wow flipInX">GALERIJA</a>
           </div>
           <div class="boxes-image image-2"></div>
         </div>
@@ -111,11 +111,11 @@
         <div class="row">
           <div class="boxes-image image-3"></div>
           <div class="boxes-content">
-            <h2 class="boxes-h2">TEKST</h2>
+            <h2 class="boxes-h2">VRHUNSKI PROVOD</h2>
             <p class="boxes-p">
               Prepustite se čarima našeg magičnog ambijenta i velikom izboru
-              piva, koktela i vrhunskih specijaliteta, uz svirke svakog petka i
-              subote. Dobrodosli u nas svet, gde nista ne nedostaje...
+              piva, koktela i vrhunskih specijaliteta, uz sjajne svirke svakog
+              petka i subote. Dobrodošli u nas svet, gde nista ne nedostaje...
             </p>
             <a href="menu.html" class="boxes-btn wow flipInX"
               >MENI I KARTA PIĆA</a
