--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <p class="boxes-p">
               Prepustite se čarima našeg magičnog ambijenta i velikom izboru
               piva, koktela i vrhunskih specijaliteta, uz sjajne svirke svakog
-              petka i subote. Dobrodošli u nas svet, gde nista ne nedostaje...
+              petka i subote. Dobrodošli u naš svet, gde nista ne nedostaje...
             </p>
             <a href="menu.html" class="boxes-btn wow flipInX"
               >MENI I KARTA PIĆA</a
