--- a/index.html
+++ b/index.html
@@ -190,23 +190,23 @@
               <div class="logos">
                 <a href="https://www.facebook.com/cornelius.cylinder/"
                   ><i
-                    class="fa fa-facebook-official logo wow fadeInUp"
+                    class="fa fa-facebook-official logo
                     aria-hidden="true"
                   ></i
                 ></a>
                 <a href="https://twitter.com/cornelinder"
-                  ><i class="fa fa-twitter wow fadeInUp" aria-hidden="true"></i
+                  ><i class="fa fa-twitter aria-hidden="true"></i
                 ></a>
                 <a href="https://www.instagram.com/cornelius_cylinder/"
                   ><i
-                    class="fa fa-instagram wow fadeInUp"
+                    class="fa fa-instagram
                     aria-hidden="true"
                   ></i
                 ></a>
                 <a
                   href="https://www.youtube.com/channel/UCFRDbxUN5TCokmgwxwPdrXg"
                   ><i
-                    class="fa fa-youtube-play wow fadeInUp"
+                    class="fa fa-youtube-play
                     aria-hidden="true"
                   ></i
                 ></a>
