--- a/menu.html
+++ b/menu.html
@@ -1241,6 +1241,9 @@
     </div>
   </footer>
 
+  <div class="loader-wrapper">
+      <span class="loader"><span class="loader-inner"></span></span>
+    </div>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
