--- a/menu.html
+++ b/menu.html
@@ -65,8 +65,8 @@
     </div>
     <div class="menu-container">
       <div class="menu-nav-go">
-        <a href="#" class="menu-nav-a menu-nav-a-on wow fadeInUp" id="restaurant">RESTORAN</a>
-        <a href="menu-caffe.html" class="menu-nav-a wow fadeInUp" id="caffeBar">KAFE-BAR</a>
+        <a href="#" class="menu-nav-a menu-nav-a-on" id="restaurant">RESTORAN</a>
+        <a href="menu-caffe.html" class="menu-nav-a" id="caffeBar">KAFE-BAR</a>
       </div>
       <h2 class="menu-h2 breakfast">DORUČAK</h2>
       <div class="menu-row">
@@ -1241,15 +1241,12 @@
     </div>
   </footer>
 
-  <div class="loader-wrapper">
-      <span class="loader"><span class="loader-inner"></span></span>
-    </div>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
   <script src="assets/js/lightbox-plus-jquery.min.js"></script>
   <script src="assets/js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="assets/js/app.js"></script>
+  <script type="text/javascript" src="assets/js/menuJs.js"></script>
   <script type="text/javascript" src="assets/js/wow.js"></script>
   <script type="text/javascript" src="assets/js/translate-menu.js"></script>
   <script src="assets/js/anime.min.js"></script>
