--- a/menu-caffe.html
+++ b/menu-caffe.html
@@ -2473,12 +2473,9 @@
       </div>
     </footer>
 
-    <div class="loader-wrapper">
-      <span class="loader"><span class="loader-inner"></span></span>
-    </div>
 
     <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="assets/js/menuJs.js"></script>
     <script type="text/javascript" src="assets/js/translate-caffe.js"></script>
     <script src="assets/js/anime.min.js"></script>
   </body>
