--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               petka i subote. Dobrodošli u naš svet, gde nista ne nedostaje...
             </p>
             <a id="lang-menus" href="menu.html" class="boxes-btn wow flipInX"
-              >MENI I KARTA PIĆA</a
+              >NAŠ MENI</a
             >
           </div>
         </div>
@@ -136,7 +136,7 @@
             toga!
           </p>
           <a id="lang-discoverMenu" href="menu.html" class="discover-btn wow fadeInUp"
-            >OTKRIJ NAŠ MENI</a
+            >OTKRIJ NAŠ JELOVNIK</a
           >
         </div>
         <div class="discover-item discover-drinks">
