--- a/menu.html
+++ b/menu.html
@@ -1241,12 +1241,15 @@
     </div>
   </footer>
 
-
+  <div class="loader-wrapper">
+    <span class="loader"><span class="loader-inner"></span></span>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
   <script src="assets/js/lightbox-plus-jquery.min.js"></script>
   <script src="assets/js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="assets/js/menuJs.js"></script>
+  <!-- <script type="text/javascript" src="assets/js/menuJs.js"></script> -->
+  <script type="text/javascript" src="assets/js/app.js"></script>
   <script type="text/javascript" src="assets/js/wow.js"></script>
   <script type="text/javascript" src="assets/js/translate-menu.js"></script>
   <script src="assets/js/anime.min.js"></script>
