--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
             <span><a class="header-btn fade" href="https://github.com/lukson33">GitHub<i class="fa fa-github"
                         aria-hidden="true"></i></a>
-                <a class="header-btn fade" href="https://www.linkedin.com/in/luka-gojkovic-028775140/">LinkedIn<i
-                        class="fa fa-linkedin" aria-hidden="true"></i></a></span>
+                <!-- <a class="header-btn fade" href="https://www.linkedin.com/in/luka-gojkovic-028775140/">LinkedIn<i
+                        class="fa fa-linkedin" aria-hidden="true"></i></a></span> -->
         </div>
     </header>
 
