--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
                         <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
                     </div>
 
-                    <a class="view-code-1" href="https://github.com/lukson33/lukson33.github.io" target="_blank">View <i
+                    <a class="view-code-1" href="https://cornelius-cylinder.com" target="_blank">View <i
                             class="fa fa-eye" aria-hidden="true"></i></a>
 
-                    <a class="view-code-1" href="https://cornelius-cylinder.com" target="_blank">Code <i
+                    <a class="view-code-1" href="https://github.com/lukson33/lukson33.github.io" target="_blank">Code <i
                             class="fa fa-code" aria-hidden="true"></i></a>
                 </div>
 
@@ -142,11 +142,10 @@
 
                 <div class="project-text">
                     <h3>Movie React App</h3>
-                    <p>A fun little game I made with a DadJokes API to further practice React and Javascript.</p>
+                    <p>My first bigger project I built with React.</p>
 
-                    <p>This app has a joke upvoting system similar to Reddit which user can interact with as well as
-                        a
-                        button for loading new jokes.</p>
+                    <p>This app uses a MovieDB API to fetch movies, and React Router for all the Routing in between the
+                        pages.</p>
 
                     <div class="project-icons-2">
                         <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
