--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                     <a class="view-code-1" href="https://cornelius-cylinder.com" target="_blank">View <i
                             class="fa fa-eye" aria-hidden="true"></i></a>
 
-                    <a class="view-code-1" href="https://github.com/lukson33/lukson33.github.io" target="_blank">Code <i
-                            class="fa fa-code" aria-hidden="true"></i></a>
+                    <a class="view-code-1" href="#" target="_blank">Code <i class="fa fa-code"
+                            aria-hidden="true"></i></a>
                 </div>
 
             </div>
