--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section id="about">
         <div class="about-container">
             <div class="about-img">
-                <img src="img/slika.jpg" alt="">
+                <img src="img/slika1.jpg" alt="">
             </div>
 
             <div class="about-content">
@@ -110,7 +110,7 @@
         <div class="project project-1">
             <div class="project-content">
                 <div class="project-img wow fadeInUp">
-                    <a href="https://cornelius-cylinder.com" target="_blank"><img src="img/Screenshot (1).png"
+                    <a href="https://cornelius-cylinder.com" target="_blank"><img src="img/Screenshot (6).png"
                             alt=""></a>
                 </div>
 
@@ -142,10 +142,10 @@
 
                 <div class="project-text">
                     <h3>Movie React App</h3>
-                    <p>My first bigger project I built with React.</p>
+                    <p>This is my first bigger project I built with React.</p>
 
-                    <p>This app uses a MovieDB API to fetch movies, and React Router for all the Routing in between the
-                        pages.</p>
+                    <p>The app uses MovieDB API to fetch all the data. The user can see Most Popular, Upcoming and Top
+                        Rated movies, as well as search for a specific movie and get more info about it.</p>
 
                     <div class="project-icons-2">
                         <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
