--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="project-content">
 
                 <div class="project-text">
-                    <h3>Movie React App</h3>
+                    <h3>React Movie App</h3>
                     <p>This is my first bigger project I built with React.</p>
 
                     <p>The app uses MovieDB API to fetch all the data. The user can see Most Popular, Upcoming and Top
@@ -172,12 +172,12 @@
             <div class="project-content">
 
                 <div class="project-img wow fadeInUp">
-                    <a href="https://youthful-elion-59fcb5.netlify.com/" target="_blank"><img
-                            src="img/Screenshot (2).png" alt=""></a>
+                    <a href="https://blissful-fermi-51cbe7.netlify.com" target="_blank"><img
+                            src="img/Screenshot (7).png" alt=""></a>
                 </div>
 
                 <div class="project-text project-text-mr">
-                    <h3>Todo App with React Hooks</h3>
+                    <h3>Todo App with React Hooks and Material UI</h3>
                     <p>Todo list application I built with a Javascript framework React.</p>
 
                     <p>I built this while learning React to solidify my knowledge and to practice a new React
@@ -189,7 +189,7 @@
                         <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>React</p>
                     </div>
-                    <a class="view-code-3" href="https://youthful-elion-59fcb5.netlify.com/" target="_blank">View <i
+                    <a class="view-code-3" href="https://blissful-fermi-51cbe7.netlify.com" target="_blank">View <i
                             class="fa fa-eye" aria-hidden="true"></i></a>
                     <a class="view-code-3" href="https://github.com/lukson33/hooks-todo" target="_blank">Code <i
                             class="fa fa-code" aria-hidden="true"></i></a>
