--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <!-- <p class="fade">Alternatively, you can download my <span><a class="header-btn" href="">résumé</a></span> -->
             </p>
 
-            <span><a class="header-btn fade" href="https://github.com/lukson33">GitHub<i class="fa fa-github"
-                        aria-hidden="true"></i></a>
+            <span><a class="header-btn fade" href="https://github.com/lukson33" target="_blank">GitHub<i
+                        class="fa fa-github" aria-hidden="true"></i></a>
                 <!-- <a class="header-btn fade" href="https://www.linkedin.com/in/luka-gojkovic-028775140/">LinkedIn<i
                         class="fa fa-linkedin" aria-hidden="true"></i></a></span> -->
         </div>
@@ -129,9 +129,6 @@
 
                     <a class="view-code-1" href="https://cornelius-cylinder.com" target="_blank">View <i
                             class="fa fa-eye" aria-hidden="true"></i></a>
-
-                    <a class="view-code-1" href="#" target="_blank">Code <i class="fa fa-code"
-                            aria-hidden="true"></i></a>
                 </div>
 
             </div>
@@ -203,9 +200,10 @@
     <footer id="contact">
         <h3>Contact Me</h3>
         <div class="icon-container">
-            <a class="icon" href="https://github.com/lukson33"><i class="fa fa-github" aria-hidden="true"></i></a>
-            <a class="icon" href="https://www.linkedin.com/in/luka-gojkovic-028775140/"><i class="fa fa-linkedin"
+            <a class="icon" href="https://github.com/lukson33" target="_blank"><i class="fa fa-github"
                     aria-hidden="true"></i></a>
+            <a class="icon" href="https://www.linkedin.com/in/luka-gojkovic-028775140/" target="_blank"><i
+                    class="fa fa-linkedin" aria-hidden="true"></i></a>
             <a class="icon" href="mailto:luka.gojkovic33@gmail.com?Subject=Hello%20again"><i class="fa fa-envelope-o"
                     aria-hidden="true"></i></a>
         </div>
