--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     show.
                     I'm a big motorsports guy as well.
                 </p>
-                <p>I'm currently working on completing my bachelor's degree in computer multimedia at ITS in Belgrade.
+                <p>I'm currently working on completing my bachelor's degree in computer multimedia at ITS Comtrade in Belgrade.
                 </p>
 
                 <div class="about-skills">
@@ -107,6 +107,7 @@
     </section>
 
     <section id="projects">
+
         <div class="project project-1">
             <div class="project-content">
                 <div class="project-img wow fadeInUp">
@@ -116,10 +117,12 @@
 
                 <div class="project-text">
                     <h3>Cornelius & Cylinder</h3>
-                    <p>This is a full website that I did for a restaurant in Belgrade called Cornelius & Cylinder.</p>
+                    <p>This is a full website that I did for a restaurant in Belgrade called Cornelius & Cylinder.
+                    </p>
 
                     <p>This website has a main page with all the information about
-                        the restaurant, as well as an interactive Menu Page with food photos, and a picture gallery.</p>
+                        the restaurant, as well as an interactive Menu Page with food photos, and a picture gallery.
+                    </p>
 
                     <div class="project-icons-1">
                         <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
