--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="welcome">
-        <h2 class="welcome-heading">Luka Gojkovicccc</h2>
+        <h2 class="welcome-heading">Luka Gojkovic</h2>
         <h3 class="welcome-sub-heading">Front-End Developer</h3>
         <div class="loader-wrapper">
             <div class="loader"></div>
@@ -80,7 +80,8 @@
                     show.
                     I'm a big motorsports guy as well.
                 </p>
-                <p>I'm currently working on completing my bachelor's degree in computer multimedia at ITS Comtrade in Belgrade.
+                <p>I'm currently working on completing my bachelor's degree in computer multimedia at ITS Comtrade in
+                    Belgrade.
                 </p>
 
                 <div class="about-skills">
