--- a/index.html
+++ b/index.html
@@ -142,6 +142,40 @@
             <div class="project-content">
 
                 <div class="project-text">
+                    <h3>Company Landing Page</h3>
+                    <p>This is a real company landing page I cloned to further improve my CSS skills.</p>
+
+                    <p>While it does have Javascript functionality for some elements, I mainly focused on HTML and CSS.
+                    </p>
+
+                    <div class="project-icons-2">
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
+                    </div>
+
+                    <a class="view-code-2" href="https://sad-nightingale-c14c07.netlify.app/" target="_blank">View <i
+                            class="fa fa-eye" aria-hidden="true"></i></a>
+                </div>
+
+                <div class="wow fadeInUp project-img">
+                    <a href="https://sad-nightingale-c14c07.netlify.app/" target="_blank"><img src="img/screenshot4.png"
+                            alt=""></a>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="project project-3">
+            <div class="project-content">
+
+                <div class="wow fadeInUp project-img">
+                    <a href="https://nifty-morse-e42fec.netlify.com" target="_blank"><img src="img/Screenshot (4).png"
+                            alt=""></a>
+                </div>
+
+                <div class="project-text">
                     <h3>React Movie App</h3>
                     <p>This is my first bigger project I built with React.</p>
 
@@ -161,43 +195,9 @@
                             class="fa fa-code" aria-hidden="true"></i></a>
                 </div>
 
-                <div class="wow fadeInUp project-img">
-                    <a href="https://nifty-morse-e42fec.netlify.com" target="_blank"><img src="img/Screenshot (4).png"
-                            alt=""></a>
-                </div>
 
             </div>
 
-        </div>
-        <div class="project project-3">
-            <div class="project-content">
-
-                <div class="project-img wow fadeInUp">
-                    <a href="https://blissful-fermi-51cbe7.netlify.com" target="_blank"><img
-                            src="img/Screenshot (7).png" alt=""></a>
-                </div>
-
-                <div class="project-text project-text-mr">
-                    <h3>Todo App with React Hooks and Material UI</h3>
-                    <p>Todo list application I built with a Javascript framework React.</p>
-
-                    <p>I built this while learning React to solidify my knowledge and to practice a new React
-                        technology, React Hooks.</p>
-
-                    <div class="project-icons-3">
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>React</p>
-                    </div>
-                    <a class="view-code-3" href="https://blissful-fermi-51cbe7.netlify.com" target="_blank">View <i
-                            class="fa fa-eye" aria-hidden="true"></i></a>
-                    <a class="view-code-3" href="https://github.com/lukson33/hooks-todo" target="_blank">Code <i
-                            class="fa fa-code" aria-hidden="true"></i></a>
-                </div>
-
-
-            </div>
         </div>
     </section>
 
